--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -15,6 +15,8 @@ header {
   overflow-x: hidden;
   justify-content: space-between;
   width: auto;
+  height: -webkit-max-content;
+  height: -moz-max-content;
   height: max-content;
   background-color: rgb(0, 0, 0);
   padding: 5px 5%;
@@ -363,6 +365,4 @@ div p {
 .row {
   display: flex;
   justify-content: center;
-}
-
-/*# sourceMappingURL=estilos.css.map */
+}/*# sourceMappingURL=estilos.css.map */
