--- a/css/estilos.css
+++ b/css/estilos.css
@@ -15,8 +15,6 @@ header {
   overflow-x: hidden;
   justify-content: space-between;
   width: auto;
-  height: -webkit-max-content;
-  height: -moz-max-content;
   height: max-content;
   background-color: rgb(0, 0, 0);
   padding: 5px 5%;
@@ -48,7 +46,6 @@ header .menu li a {
   text-decoration: none;
   font-size: 700;
 }
-
 header .menu li:hover {
   transform: scale(1.1);
   color: whitesmoke;
@@ -105,7 +102,6 @@ main {
   display: grid;
   justify-content: center;
 }
-
 .image > .frente {
   justify-content: center;
   align-self: center;
@@ -124,7 +120,7 @@ main {
 
 /*jumbotron*/
 .jumbotron {
-  background-image: url(/images/pexels-afta-putta-gunawan-683039.jpg);
+  background-image: url(../images/pexels-afta-putta-gunawan-683039.jpg);
   height: 300px;
   background-size: cover;
   background-position: center;
@@ -163,28 +159,23 @@ footer {
   padding: 20px;
   float: left;
 }
-
 footer i {
   letter-spacing: 20px;
   font-size: 40px;
   color: blueviolet;
   padding-left: 5px;
 }
-
 footer i:hover {
   text-shadow: 0 0 5px #fff;
 }
-
 footer p {
   text-align: center;
 }
-
 footer footer {
   margin-top: 10px;
   font-family: "Oswald", sans-serif;
   font-size: 20px;
 }
-
 footer footer parrafofooter {
   text-align: left;
   padding-left: 10px;
@@ -362,7 +353,7 @@ div p {
 
 .card-container .card:hover {
   transform: translateY(-15px);
-  box-shadow: 0 4px 15px rgb(221, 196, 237);
+  box-shadow: 0 4px 15px rgb(154, 3, 255);
 }
 
 .row {
@@ -373,15 +364,5 @@ div p {
   display: flex;
   justify-content: center;
 }
-
-fieldset {
-  width: 360px;
-  background-color: #000000;
-  padding: 30px;
-  margin: auto;
-  margin-top: 100px;
-  border-radius: 4px;
-  color: white;
-} /*# sourceMappingURL=estilos.css.map */
 
 /*# sourceMappingURL=estilos.css.map */
